src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>ActionSummary__c</fullName>
        <label>Action Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Infopass</fullName>
                    <label>InfoPass</label>
                </value>
                <value>
                    <fullName>Create</fullName>
                </value>
                <value>
                    <fullName>Read</fullName>
                </value>
                <value>
                    <fullName>Edit</fullName>
                </value>
                <value>
                    <fullName>Delete</fullName>
                </value>
                <value>
                    <fullName>Infopass e</fullName>
                    <isActive>false</isActive>
                    <label>Infopass e</label>
                </value>
                <value>
                    <fullName>James  Blinzinger - Editor</fullName>
                    <isActive>false</isActive>
                    <label>James  Blinzinger - Editor</label>
                </value>
                <value>
                    <fullName>James R. Blinzinger - Editor</fullName>
                    <isActive>false</isActive>
                    <label>James R. Blinzinger - Editor</label>
                </value>
                <value>
                    <fullName>xxxxxx</fullName>
                    <isActive>false</isActive>
                    <label>xxxxxx</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PicklistTest__c</fullName>
        <label>Picklist Test</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Origin</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProductHasExtendedWarranty__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Product Has Extended Warranty</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProductPurchaseDate__c</fullName>
        <label>Product Purchase Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProductTotalWarrantyDays__c</fullName>
        <label>Product Total Warranty Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VIPCustomer__c</fullName>
        <formula>OR(
  ISPICKVAL( Account.AccountRating__c  , &apos;4&apos;),
  ISPICKVAL( Account.AccountRating__c  , &apos;5&apos;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VIP Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WarrantySummary__c</fullName>
        <label>Warranty Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Action_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(Action__c,&apos;Infopass&apos;), ISBLANK(ActionSummary__c))</errorConditionFormula>
        <errorMessage>Please add Infopass summary.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VIP_Customer_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
OR( 
ISPICKVAL( Account.AccountRating__c , &apos;4&apos;), 
ISPICKVAL( Account.AccountRating__c , &apos;5&apos;) 
), 
NOT(VIPCustomer__c)
)</errorConditionFormula>
        <errorMessage>The associated Account is a VIP Customer</errorMessage>
    </validationRules>
</CustomObject>